deploy/htdocs/version/src/inc/style/component/block/_block-market-map.scss
.component-block-market-map {
	@include aspect-ratio($sizeGrid*36, $sizeGrid*22);
	$zIndex: map, ui;
	max-height: calc(100vh - #{$sizeHeader});

	.map-box {
		z-index: zindex($zIndex, map);
	}

	.zoom-actions {
		@include pos(50%, auto, auto, $sizeGrid * 2);
		position: absolute;
		z-index: zindex($zIndex, ui);
		transform: translateY(-50%);

		.component-button-circle-icon {
			display: block;

			&:not(:first-child) {
				margin-top: $sizeGrid / 2;
			}
		}
	}

	// Side Panel
	.side-panel {
		position: absolute;
		@include size($sizeGrid*7, 100%);
		@include pos(0, 0, 0, auto);
		background-color: white;
		z-index: zindex($zIndex, ui);

		.scroll-wrapper {
			height: calc(100% - #{$sizeGrid*4});
		}

		.scroll-content { }
		.scroll-content-inner {
			width: calc(100% + 20px);
		}

		.scroll-bar {
			width: $sizeGrid/2;

			.knob {
				width: 5px;
			}
		}
	}

	> .service-info {
		display: none;
	}

	// Selected Value
	.selected-value {
		display: none;
	}

	// Filter List
	.filter-list {
		@extend %reset-list;
	}

	.filter-list-item {
		position: relative;
		padding: 3rem $sizeGrid;
		cursor: pointer;

		&:after {
			position: absolute;
			@include pos(auto, $sizeGrid, 0, $sizeGrid*0.7);
			background-color: rgba(#dadada, 0.6);
			content: "";
			height: 1px;
		}

		// Active State
		&.is-active {
			background-color: $colorSecondary;
			color: white;

			&:after {
				display: none;
			}
		}
	}

	// Service Info
	.service-info {
		@include size(100%, $sizeGrid*4);
		position: relative;
		background-color: $colorLightGrey;
		display: flex;
		align-items: center;
		flex-wrap: nowrap;
		padding: 0 $sizeGrid*1.5 0 $sizeGrid;
		text-decoration: none;
		color: $colorPrimary;

		.profile-image {
			@include size($sizeGrid*1.5);
			border-radius: 100%;
			overflow: hidden;
			margin-right: $sizeGrid/2;
			flex-shrink: 0;
		}

		.profile-info {
			.name { }

			.role {
				font: 400 1.2rem / 1 $fontOpenSans;
				margin-top: $sizeGrid/4;
			}
		}

		// Button Select Anchor
		.button-select-anchor {
			position: absolute;
			@include pos(50%, $sizeGrid/2, auto, auto);
			transform: translate(0, -50%);
		}
	}

	// Search Bar
	.search-bar {
		position: absolute;
		@include pos(auto, $sizeGrid*9, $sizeGrid*2, $sizeGrid*2);
		z-index: zindex($zIndex, ui);
		height: $sizeGrid*2;
		background-color: white;
		display: flex;
		flex-wrap: nowrap;
		align-items: center;

		.input-text {
			margin: 0 $sizeGrid;
			overflow: visible;
		}

		.auto-complete {
			@include size(calc(100% + #{$sizeGrid * 2}), $sizeGrid * 2);
			@include pos(-10rem, auto, auto, -$sizeGrid);
			background: $colorLightGrey;
			position: absolute;
			font: 600 1.6rem/#{$sizeGrid * 2} $fontOpenSans;
			color: $colorPrimary;
			padding: 0 $sizeGrid;
			text-align: left;
		}

		.button-search {
			@include size($sizeGrid*5, 100%);
			background-color: $colorSecondary;
			text-transform: uppercase;
			font: 700 1rem / #{$sizeGrid*2} $fontOpenSans;
			color: white;
		}
	}

	// Breakpoint
	@include respond-to(SMALL) {
		max-height: none;
		margin-top: 0 !important;

		&:before {
			display: none;
		}

		// Map Box
		.map-box {
			position: relative;
			height: calc(100vh - #{$sizeGrid*12});
		}

		// Selected Value
		.selected-value {
			position: absolute;
			@include offset($sizeGrid/2, $sizeGrid/2);
			@include size(calc(100% - #{$sizeGrid}), $sizeGrid*4);
			display: block;
			background-color: white;
			z-index: zindex($zIndex, ui);
			line-height: $sizeGrid*4;
			padding: 0 $sizeGrid;
			border-bottom: 1px solid rgba(#dadada, 0.6);

			&:after {
				@include pos(50%, $sizeGrid*2, auto, auto);
				@include arrow(down, $colorSecondary, 2rem);
				content: "";
				position: absolute;
			}

			// Has Value State
			&.has-value {
				background-color: $colorSecondary;
				color: white;

				&:after {
					border-top-color: white;
				}
			}

			// Open State
			&.is-open {
				&:after {
					@include arrow(up, $colorSecondary, $sizeGrid/2);
				}

				&.has-value {
					&:after {
						border-bottom-color: white;
					}
				}
			}
		}

		// Search Bar
		.search-bar {
			position: relative;
			height: $sizeGrid*8;
			@include pos(auto, auto, auto, auto);
			flex-wrap: wrap;

			.input-text-main {
				margin: $sizeGrid 0;
				padding: 0 $sizeGrid;

				.placeholder-label {
					margin-left: $sizeGrid;
				}
			}

			.button-search {
				@include size(100%, $sizeGrid*4);
				font-size: mobile-size(2.8rem);
			}
		}

		// Side Panel
		.side-panel {
			height: 0;
			width: calc(100% - #{$sizeGrid});
			@include offset($sizeGrid/2, ($sizeGrid/2) + $sizeGrid*4);
			transition: height 250ms ease(easeOutExpo);

			.scroll-wrapper {
				height: 100%;
			}

			.scroll-bar {
				width: $sizeGrid*2;
				background-color: white;

				&:after {
					@include size(1px, 100%);
					@include offset(2px, 0);
					content: "";
					background-color: rgba(#dadada, 0.6);
					position: absolute;
				}
			}

			.service-info {
				display: none;
			}

			// Open State
			&.is-open {
				height: calc(100vh - #{$sizeGrid*17});
			}
		}

		// Service Info
		> .service-info {
			display: flex;
			height: $sizeGrid*8;
			padding: 0 $sizeGrid*2 0 $sizeGrid*3;

			.profile-image {
				@include size($sizeGrid*3);
				margin-right: $sizeGrid;
			}

			.profile-info {
				text-align: left;

				.name {
					font-size: mobile-size(4rem);
				}
				.role {
					font-size: mobile-size(2.2rem);
				}
			}

			.button-select-anchor {
				right: $sizeGrid;
			}
		}

		// Filters
		.filter-list-item {
			padding: $sizeGrid;

			&:after {
				right: $sizeGrid*4;
				left: 0;
			}
		}
	}
}

